--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 <div id="page">
 <header>
 	<div id="logo">
-		<a href="index.html"> <img src="./img/header.png" width="800" height="100"></a>
+		<a href="index.html"> <img src="./img/header.PNG" width="800" height="100"></a>
 	</div>
 	<div id="top">
 		  <button type="submit"> <img src="./img/search.jpg" width="20" height=13> </button><input type="search">
@@ -223,7 +223,7 @@
 
 <div class="clear"></div>
 <section><div>
-	<img src="./img/mainview.png" width="1690" height="380">
+	<img src="./img/mainview.PNG" width="1690" height="380">
 </div>
 </section>
 
@@ -252,7 +252,7 @@
 <section class="clear">
 	<ul>
 		<div>
-			<li><a href="http://www.naver.com"> <img src="./img/coffee.png" width="1693" height="120"></a></li>
+			<li><a href="http://www.naver.com"> <img src="./img/coffee.PNG" width="1693" height="120"></a></li>
 		</div>
 	</ul>
 </section>
