--- a/traffic.html
+++ b/traffic.html
@@ -97,7 +97,7 @@
 <body>
 	<header>
 	<div id="logo">
-		<a href="index.html"> <img src="./img/header.png" width="800" height="100"></a>
+		<a href="index.html"> <img src="./img/header.PNG" width="800" height="100"></a>
 	</div>
 	</header>
 
@@ -209,7 +209,7 @@
 
 	<section>
 		<div class="mapmap">
-		<img src="./img/songtanmap.png" height="600" width="1000">
+		<img src="./img/songtanmap.PNG" height="600" width="1000">
 	</div>
 	</section>
 
