--- a/china.html
+++ b/china.html
@@ -137,7 +137,7 @@
 
 	<header>
 	<div id="logo">
-		<a href="index.html"> <img src="./img/header.png" width="800" height="100"></a>
+		<a href="index.html"> <img src="./img/header.PNG" width="800" height="100"></a>
 	</div>
 	</header>
 
@@ -215,7 +215,7 @@
 	<section>
 		<ul>
 			<div class="young">
-				<img src="./img/young.png" width="930" height="68">
+				<img src="./img/young.PNG" width="930" height="68">
 			</div>
 		</ul>
 	</section>
