--- a/bloggalary.html
+++ b/bloggalary.html
@@ -109,7 +109,7 @@
 
 	<header>
 	<div id="logo">
-		<a href="index.html"> <img src="./img/header.png" width="800" height="100"></a>
+		<a href="index.html"> <img src="./img/header.PNG" width="800" height="100"></a>
 	</div>
 	</header>
 
@@ -176,7 +176,7 @@
 	</section>
 
 	<section>
-		<div class="blog2"><img src="./img/flower.png" width="800" height="50">
+		<div class="blog2"><img src="./img/flower.PNG" width="800" height="50">
 	</section>
 
 	<section>
@@ -232,7 +232,7 @@
 
 	<section>
 		<div class="blog8">
-			<img src="./img/blogFN.png" width="900" height="80">
+			<img src="./img/blogFN.PNG" width="900" height="80">
 		</div>
 	</section>
 
