--- a/Review.html
+++ b/Review.html
@@ -113,7 +113,7 @@
 <body>
 	<header>
 	<div id="logo">
-		<a href="index.html"> <img src="./img/header.png" width="800" height="100"></a>
+		<a href="index.html"> <img src="./img/header.PNG" width="800" height="100"></a>
 	</div>
 	</header>
 
@@ -178,7 +178,7 @@
 
 <section>
 		<ul>
-			<li class="piew"><img src="./img/reviewpre.png" width="330" height="400"></li>
+			<li class="piew"><img src="./img/reviewpre.PNG" width="330" height="400"></li>
 			<li class="piew1">이곳에 리뷰를 남겨주세요 <br> <textarea rows=24 cols=122>
 			익명이어도 예의를 지켜주세요  </textarea></li>
 			<li class="piew2"><input type=submit></li>
